--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:site_name" content="xkre.me">
+    <meta property="og:title" content="Malaysia Inflation Calculator">
+    <meta property="og:description" content="Simple calculator to calculate equivalance monetary values between two year" />
     <title>Vite App</title>
   </head>
   <body>
