update open graph tags

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8">
     <link rel="icon" href="/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:site_name" content="xkre.me">
-    <meta property="og:title" content="Malaysia Inflation Calculator">
-    <meta property="og:description" content="Simple calculator to calculate equivalance monetary values between two year" />
-    <title>Vite App</title>
+    
+    <title>Malaysia Inflation Calculator</title>
+    <meta name="description" content="Simple calculator to calculate equivalance monetary values between two year">
+    <meta itemprop="name" content="Malaysia Inflation Calculator">
+    <meta itemprop="description" content="Simple calculator to calculate equivalance monetary values between two year">
+    <meta name="og:title" content="Malaysia Inflation Calculator">
+    <meta name="og:description" content="Simple calculator to calculate equivalance monetary values between two year">
+    <meta name="og:url" content="https://inflation-calc.xkre.me/">
+    <meta name="og:site_name" content="xkre.me">
+    <meta name="og:locale" content="en_MY">
+    <meta name="og:type" content="website">
   </head>
   <body>
     <div id="app"></div>
