--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>Malaysia Inflation Calculator</title>
     <meta name="description" content="Simple calculator to calculate equivalance monetary values between two year">
     <meta itemprop="name" content="Malaysia Inflation Calculator">
